--- a/.github/workflows/main_tcp.yml
+++ b/.github/workflows/main_tcp.yml
@@ -18,18 +18,26 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Cache pip dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - name: Create and start virtual environment
         run: |
           python -m venv venv
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r requirements.txt -v
+        run: pip install -r arequirements.txt -v
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r -x \*venv\*
+        run: zip release.zip ./* -r -x \*venv\* \*.git\* \*.github\* 
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v3
@@ -68,3 +76,4 @@ jobs:
         with:
           app-name: 'tcp'
           slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
