--- a/.github/workflows/main_tcp.yml
+++ b/.github/workflows/main_tcp.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Python version
         uses: actions/setup-python@v2
         with:
-          python-version: '3.11'
+          python-version: '3.10'
 
       - name: Cache pip dependencies
         uses: actions/cache@v2
@@ -37,7 +37,7 @@ jobs:
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r -x \*venv\* \*.git\* \*.github\* 
+        run: zip -r release.zip . -x ".*" -x "*/venv/*" -x "*.git*" -x "*.github*"
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v3
@@ -76,4 +76,5 @@ jobs:
         with:
           app-name: 'tcp'
           slot-name: 'Production'
+          package: release.zip
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
