--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,11 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.11"
 fastapi = "^0.111.0"
 uvicorn = {extras = ["standard"], version = "^0.30.1"}
-
+opencv-python-headless = "^4.5.3.56"
+mediapipe = "^0.10.0"
 
 [build-system]
 requires = ["poetry-core"]
